--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -42,6 +42,19 @@
   }
 }
 
+.highlight {
+  & .p {
+    color: white;
+  }
+
+  & .o {
+    color: white;
+  }
+  & .n {
+    color: #50a04f;
+  }
+}
+
 .search-input {
   color: white;
 }
