[Main_app] LASER-929 documentation progress add 2

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -7,6 +7,16 @@
     & .nf {
       color: #45cbf7;
     }
+
+    & .n {
+      color: #eee;
+    }
+  }
+}
+
+.language-jsx {
+  & .nx {
+    color: #45cbf7;
   }
 }
 
